<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="384dp"
    android:layout_height="600dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="0dp" >


    <ImageView
        android:layout_width="150dp"
        android:layout_height="34dp"
        android:src="@drawable/logo"
        android:layout_marginTop="15dp"
        android:id="@+id/imageView2"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/user"
                android:id="@+id/imageViewUser"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/customborder"
                android:hint="@string/hint_name"
                android:padding="5dp"
                android:singleLine="true"
                android:inputType="textCapWords"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/phone"
                android:id="@+id/imageViewPhone"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:id="@+id/nohp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/customborder"
                android:hint="@string/hint_nohp"
                android:inputType="phone"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/password"
                android:id="@+id/imageViewPassword"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/customborder"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/home"
                android:id="@+id/imageViewHome"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:id="@+id/alamat"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/customborder"
                android:hint="@string/hint_alamat"
                android:padding="5dp"
                android:singleLine="true"
                android:inputType="textCapWords"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                />

        </LinearLayout>



        <!-- Login Button -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="296dp"
            android:layout_height="35dp"
            android:layout_marginTop="25dip"
            android:background="@color/greenold"
            android:text="@string/btn_register"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dip"
            android:background="@color/supergrey"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/green"
            android:textSize="12sp"
            android:layout_weight="1.89" />


    </LinearLayout>

</LinearLayout>
</ScrollView>