<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="34dp"
        android:src="@drawable/logo"
        android:layout_marginTop="15dp"
        android:id="@+id/imageView2"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:layout_marginTop="140dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/tukangsayurid"
                android:id="@+id/imageViewUser"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:id="@+id/nohp"
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/customborder"
                android:hint="@string/hint_nohp"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/password"
                android:id="@+id/imageViewPassword"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/customborder"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"/>

            </LinearLayout>



        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="296dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dip"
            android:background="@color/greenold"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="190dip"
            android:background="@color/lightgrey"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/green"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>
</ScrollView>